--- a/provas-de-conceitos/unit-of-work/Project.UnitOfWork/Project.UnitOfWork.csproj
+++ b/provas-de-conceitos/unit-of-work/Project.UnitOfWork/Project.UnitOfWork.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Core\UnitOfWorkFactory.cs" />
     <Compile Include="Entities\Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\IRepository.cs" />
     <Compile Include="Repositories\UsuarioRepository.cs" />
     <Compile Include="Core\IUnitOfWork.cs" />
     <Compile Include="Core\IUnitOfWorkFactory.cs" />
