atualização de tipos genéricos

--- a/provas-de-conceitos/unit-of-work/Project.UnitOfWork/Project.UnitOfWork.csproj
+++ b/provas-de-conceitos/unit-of-work/Project.UnitOfWork/Project.UnitOfWork.csproj
@@ -42,7 +42,8 @@
   <ItemGroup>
     <Compile Include="Core\UnitOfWork.cs" />
     <Compile Include="Core\UnitOfWorkFactory.cs" />
-    <Compile Include="Core\UsuarioDbContext.cs" />
+    <Compile Include="Contexts\UsuarioDbContext.cs" />
+    <Compile Include="Entities\Entity.cs" />
     <Compile Include="Entities\Usuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\IRepository.cs" />
