adição do unitofworkcontextaware para impedir que os usuarios utilizem dbset na camada de serviço

--- a/provas-de-conceitos/unit-of-work/Project.UnitOfWork/Project.UnitOfWork.csproj
+++ b/provas-de-conceitos/unit-of-work/Project.UnitOfWork/Project.UnitOfWork.csproj
@@ -51,6 +51,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Core\IResolver.cs" />
+    <Compile Include="Core\IUnitOfWorkContextAware.cs" />
     <Compile Include="Core\Resolver.cs" />
     <Compile Include="Core\UnitOfWork.cs" />
     <Compile Include="Core\UnitOfWorkFactory.cs" />
