--- a/provas-de-conceitos/unit-of-work/Project.UnitOfWork.Tests/Project.UnitOfWorkProject.Tests.csproj
+++ b/provas-de-conceitos/unit-of-work/Project.UnitOfWork.Tests/Project.UnitOfWorkProject.Tests.csproj
@@ -7,8 +7,8 @@
     <ProjectGuid>{DB1668C1-1F4C-4184-85B9-DA48334A8275}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Project.UnitOfWork.Tests</RootNamespace>
-    <AssemblyName>Project.UnitOfWork.Tests</AssemblyName>
+    <RootNamespace>Project.UnitOfWorkProject.Tests</RootNamespace>
+    <AssemblyName>Project.UnitOfWorkProject.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
