--- a/provas-de-conceitos/unit-of-work/Project.UnitOfWorkProject.WebApi/packages.config
+++ b/provas-de-conceitos/unit-of-work/Project.UnitOfWorkProject.WebApi/packages.config
@@ -11,4 +11,6 @@
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.1.0" targetFramework="net462" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net462" />
   <package id="Owin" version="1.0" targetFramework="net462" />
+  <package id="SimpleInjector" version="4.0.3" targetFramework="net462" />
+  <package id="SimpleInjector.Integration.WebApi" version="4.0.3" targetFramework="net462" />
 </packages>
