--- a/provas-de-conceitos/unit-of-work/Project.UnitOfWork/Project.UnitOfWorkProject.csproj
+++ b/provas-de-conceitos/unit-of-work/Project.UnitOfWork/Project.UnitOfWorkProject.csproj
@@ -50,6 +50,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Core\IResolver.cs" />
+    <Compile Include="Core\IUnitOfWorkContextAware.cs" />
+    <Compile Include="Core\Resolver.cs" />
     <Compile Include="Core\UnitOfWork.cs" />
     <Compile Include="Core\UnitOfWorkFactory.cs" />
     <Compile Include="Contexts\UsuarioDbContext.cs" />
