--- a/provas-de-conceitos/unit-of-work/Project.UnitOfWorkProject.WebApi/Web.config
+++ b/provas-de-conceitos/unit-of-work/Project.UnitOfWorkProject.WebApi/Web.config
@@ -1,10 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<!--
-  For more information on how to configure your ASP.NET application, please visit
-  https://go.microsoft.com/fwlink/?LinkId=301879
-  -->
 <configuration>
   <appSettings></appSettings>
+  <connectionStrings>
+    <add name="Default" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=UnitOfWork;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.2" />
     <httpRuntime targetFramework="4.6.2" />
