--- a/provas-de-conceitos/unit-tests/Project.TestingProject/Project.TestingProject.csproj
+++ b/provas-de-conceitos/unit-tests/Project.TestingProject/Project.TestingProject.csproj
@@ -135,8 +135,8 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="UnitTest1.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RepositoriesTests\UsuarioRepositoryTests\UsuarioRepositoryAddTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
@@ -151,6 +151,9 @@
       <Project>{cd1e9325-23a2-4cee-a985-188145385137}</Project>
       <Name>Project.UnitOfWorkProject</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="RepositoriesTests\PaisRepositoryTests\" />
   </ItemGroup>
   <Import Project="$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets" Condition="Exists('$(VSToolsPath)\TeamTest\Microsoft.TestTools.targets')" />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
