--- a/provas-de-conceitos/unit-tests/Project.TestingProject/packages.config
+++ b/provas-de-conceitos/unit-tests/Project.TestingProject/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Castle.Core" version="4.0.0" targetFramework="net462" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net462" />
   <package id="FluentAssertions" version="4.19.2" targetFramework="net462" />
   <package id="Microsoft.CSharp" version="4.0.1" targetFramework="net462" />
   <package id="Microsoft.NETCore.Platforms" version="1.0.1" targetFramework="net462" />
