--- a/provas-de-conceitos/unit-tests/Project.TestingProject/app.config
+++ b/provas-de-conceitos/unit-tests/Project.TestingProject/app.config
@@ -1,8 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <configSections>
-        <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
-    </configSections>
+  </configSections>
+  <connectionStrings>
+    <add name="Default" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=UnitOfWork;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
