--- a/provas-de-conceitos/unit-tests/Project.TestingProject/app.config
+++ b/provas-de-conceitos/unit-tests/Project.TestingProject/app.config
@@ -3,7 +3,7 @@
   <configSections>
   </configSections>
   <connectionStrings>
-    <add name="Default" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=UnitOfWork;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <add name="Default" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=UnitOfWorkTests;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
