--- a/provas-de-conceitos/unit-tests/Project.TestingProject/app.config
+++ b/provas-de-conceitos/unit-tests/Project.TestingProject/app.config
@@ -5,6 +5,9 @@
   <connectionStrings>
     <add name="Default" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=UnitOfWorkTests;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <appSettings>
+    <add key="AutomaticDropAndCreateDatabase" value="false" />
+  </appSettings>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
       <dependentAssembly>
