--- a/provas-de-conceitos/unit-tests/Project.TestingProject/Project.TestingProject.csproj
+++ b/provas-de-conceitos/unit-tests/Project.TestingProject/Project.TestingProject.csproj
@@ -145,15 +145,17 @@
     <Reference Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Base\BaseDatabaseTests.cs" />
+    <Compile Include="RepositoriesTests\Base\BaseDatabaseTests.cs" />
     <Compile Include="Base\BaseTests.cs" />
-    <Compile Include="Base\DatabaseSetup.cs" />
-    <Compile Include="Base\GenericSeedData.cs" />
-    <Compile Include="Base\ISeedData.cs" />
+    <Compile Include="RepositoriesTests\Base\DatabaseSetup.cs" />
+    <Compile Include="RepositoriesTests\Base\GenericSeedData.cs" />
+    <Compile Include="RepositoriesTests\Base\ISeedData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositoriesTests\EnderecoRepositoryTests\EnderecoRepositoryAddTests.cs" />
-    <Compile Include="RepositoriesTests\UsuarioRepositoryTests\UsuarioRepositoryAddTests.cs" />
-    <Compile Include="RepositoriesTests\UsuarioRepositoryTests\UsuarioRepositorySeed\UsuarioSeedData.cs" />
+    <Compile Include="RepositoriesTests\UsuarioRepositoryTests\AddShould.cs" />
+    <Compile Include="RepositoriesTests\UsuarioRepositoryTests\UsuarioRepositoryTestsBase.cs" />
+    <Compile Include="RepositoriesTests\UsuarioRepositoryTests\UsuarioSeedData.cs" />
+    <Compile Include="ServicesTests\UsuarioServiceTests\UsuarioServiceAddAsyncTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
