--- a/provas-de-conceitos/unit-tests/Project.TestingProject/Project.TestingProject.csproj
+++ b/provas-de-conceitos/unit-tests/Project.TestingProject/Project.TestingProject.csproj
@@ -153,9 +153,10 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RepositoriesTests\EnderecoRepositoryTests\EnderecoRepositoryAddTests.cs" />
     <Compile Include="RepositoriesTests\UsuarioRepositoryTests\AddShould.cs" />
-    <Compile Include="RepositoriesTests\UsuarioRepositoryTests\UsuarioRepositoryTestsBase.cs" />
-    <Compile Include="RepositoriesTests\UsuarioRepositoryTests\UsuarioSeedData.cs" />
-    <Compile Include="ServicesTests\UsuarioServiceTests\UsuarioServiceAddAsyncTests.cs" />
+    <Compile Include="RepositoriesTests\UsuarioRepositoryTests\Base\UsuarioRepositoryTestsBase.cs" />
+    <Compile Include="RepositoriesTests\UsuarioRepositoryTests\Base\UsuarioSeedData.cs" />
+    <Compile Include="ServicesTests\UsuarioServiceTests\AddAsyncShould.cs" />
+    <Compile Include="ServicesTests\UsuarioServiceTests\Base\UsuarioServiceTestsBase.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
